# robo_transformers

./: .coverage  .fdignore  .gitignore  .gitmodules  LICENSE  README.md  coverage.xml  demo.py  pyproject.toml  registry.py  requirements.txt  rt1_test.py
.github/: PULL_REQUEST_TEMPLATE.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: code_cov.yaml  docs.yml  label.yml  macos.yml  publish.yml  pylint.yml  python-publish.yml  test.yml  ubuntu.yml  unit-test.yml
common/: samples.py
docs/: cache_title.json  metadata.json  sitemap.xml  tree.html
docs/data/: 0.json  1.json
docs/data/titles/: 0.json
docs/doc/: 07b38106-e56f-47f4-a9e6-b1d083c269ac.json  113dcebe-8cb3-42f4-a00c-a7d9b981ad87.json  17b68d30-9988-457c-a477-491724a18501.json  3f8ec95e-0069-4870-adc3-6317d2f2a4c8.json  42a9b96f-4419-4f0f-a57f-67e921a15906.json  55211980-f373-4153-8951-1ad3d9156664.json  7451ae99-df7f-4575-bd77-dc30effbb10b.json  836ff910-0eae-4313-8cc7-d7d2a460a0a6.json  855f28d0-35bf-45c7-9b15-e76bd2c625ba.json  95ed5d35-f844-437d-9f2d-4a15439c0adc.json  9820eea1-c310-48c5-bc45-24b7302e813d.json  a9925d6d-3a0c-42b1-9ad8-99a75c68da37.json  ade9c952-6ce7-418d-93ad-2e1bd3107639.json  ca4ed23f-6999-403b-abb0-2fb1dbf90e50.json  e057afa4-79a4-4900-b03b-9c0b322973f5.json  e5e160ab-9229-48cd-8ed7-09630fca4e77.json  e5ea5bf2-3d2a-4268-9f4a-ce91ae8b894b.json
docs/src/robo_transformers/: demo.py
docs/src/robo_transformers/abstract/: action.py  agent.py
docs/src/tests/: test_inference_server.py  test_octo.py
interface/: __init__.py  agent.py  observation.py  sample.py
models/: language.py  replay.py  teleop.py
models/rt1/: agent.py  inference.py
robo_transformers/: data_util.py  demo.py  inference.py  inference_server.py  recorder.py  registry.py  replayer.py  rt1_inference.py
robo_transformers/abstract/: recorder.py
robo_transformers/common/: actions.py  observations.py  samples.py  transformations.py
robo_transformers/data/: data_loading.py  data_util.py
robo_transformers/interface/: action.py  agent.py  observation.py  sample.py
robo_transformers/models/: language.py  replay.py  teleop.py  visionpro.py
robo_transformers/models/octo/: action.py  agent.py  example.py  inference.py
robo_transformers/models/rt1/: action.py  agent.py  inference.py
robo_transformers/models/rtdiffusion/: agent.py
robo_transformers/octo/: inference.py
robo_transformers/oxe_torch/: __init__.py  action_tokenization.py  rtx1.py
robo_transformers/oxe_torch/data/: dataset.py
robo_transformers/oxe_torch/rt1/: IO_dataset_torch.py  IO_evaluator.py  IO_trainer_torch.py  requirements.txt  train_config.json
robo_transformers/oxe_torch/rt1/maruya24_rt1/: transformer.py  transformer_network.py  transformer_test.py
robo_transformers/oxe_torch/train/: dist.py  oxe_training_module.py
robo_transformers/rt1/: rt1_inference.py
robo_transformers/spaces/: common.py  util.py
tests/: test_actions.py  test_data_util.py  test_inference_server.py  test_replayer.py  test_rt1_policy.py  test_rt1pose.py  test_rtl.py
(+11 files in other folders)
