[tool.poetry]
name = "robo-transformers"
version = "0.1.3"
description = "Robotics Transformer Inference in Tensorflow. RT-1, RT-2, RT-X, PALME."
authors = ["Sebastian Peralta <peraltas@seas.upenn.edu>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "robo_transformers"  },
    { include = "robo_transformers/**/*.py" },
]


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
tensorflow-macos = { version = "^2.15.0", markers = "sys_platform == 'darwin'" }
tensorflow = { version = "^2.15.0"}
gdown = "^4.7.1"
pillow = "^10.1.0"
tensorflow-hub = "^0.15.0"
tf-agents = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



