[tool.poetry]
name = "robo-transformers"
version = "1.0.0"
description = "RT-1, RT-1-X, Octo Robotics Transformer Model Inference"
authors = ["Sebastian Peralta <peraltas@seas.upenn.edu>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "robo_transformers"  },
    { include = "robo_transformers/**/*.py" },
]


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
# tensorflow-macos = { version = "^2.15.0", markers = "sys_platform == 'darwin'" }
# tensorflow-metal= { version = "^1.1.0", markers = "sys_platform == 'darwin'" }
tensorflow = "^2.15.0"
gdown = "^4.7.1"
pillow = "^10.1.0"
tensorflow-hub = "^0.15.0"
tf-agents = "^0.19.0"
importlib-resources = "^6.1.1"
protobuf = ">=3.19.6,<4.24"
beartype = "^0.16.4"
pyyaml = "^6.0.1"
lark = "^1.1.9"
jax = "^0.4.23"
jaxlib = "^0.4.23"
opencv-python = "^4.9.0.80"
flax = "^0.7.5"
distrax = "^0.1.5"
einops = "^0.7.0"
huggingface-hub = "^0.20.2"
transformers = "^4.36.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



